# cichecker

./: LICENSE.txt  README.md  pyproject.toml
src/: cicheckercli.py
src/cichecker/: __about__.py  __init__.py  __main__.py  cilogger.py  messages.py
src/cichecker/checks/: cifile.py  network.py  registry.py
src/cichecker/cli/: __init__.py
src/cichecker/cli/subcommands/: file_checks.py  network.py  registry_checks.py
tests/: test_networkChecks.py
